<resources>
    <string name="app_name">Survey</string>
    <string name="action_settings">Settings</string>
    <string name="some_error">Something went wrong</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="input_invalid">Email or password cannot be empty</string>
    <string name="empty_screen">We do not have anything\nhere right now. Please Retry</string>
    <string name="btn_retry">Retry</string>
    <string name="title_home">Home</string>


    <string name="label_email">Email \n%1$s</string>
    <string name="label_num">MobileNumber \n%1$s</string>
    <string name="label_praanadhaara">PRAANADHAARA</string>
    <string name="label_select_one_of_the_below">Select one of the below</string>
    <string name="label_enrollment">ENROLLMENT</string>
    <string name="label_survey">SURVEY</string>
    <string name="logout">LOGOUT</string>
    <string name="label_survey_list">Survey List</string>
    <string name="label_new">New</string>
    <string name="label__55">55</string>
    <string name="label_enrollment_form">Enrollment Form</string>
    <string name="label_enter_your_phone_number">Enter Your Phone Number</string>
    <string name="label_91_8500352572">+91 8500352572</string>
    <string name="label_login">LOGIN</string>
    <string name="label_otp_sent_to_ypur_phone_number">OTP sent to your phone number</string>
    <string name="label_otp_verification">OTP VERIFICATION</string>
    <string name="label_your_phone_number">Your Phone Number</string>
    <string name="label_91_8500354342">+91 8500354342</string>
    <string name="label_enter_your_otp_below">enter your OTP below</string>
    <string name="label_1">1</string>
    <string name="label_verify">VERIFY</string>
    <string name="label_resend_in_00_25">Resend in </string>
    <string name="label_resend_otp">RESEND OTP</string>
    <string name="label_mobile_number">Mobile Number</string>
    <string name="label_hello">Hello</string>
    <string name="label_krishna_kishore">Krishna Kishore</string>
    <string name="label_in_progress">In-Progress</string>
    <string name="label_135">135</string>
    <string name="label_in_survey">In-Survey</string>
    <string name="label_28">28</string>
    <string name="label_completed">Completed</string>
    <string name="labe_55">55</string>
    <string name="carry_out_your_entire_project_from_start_to_finish_and_report_to_stakeholders_using_one_solution_without_worrying_about_piles_of_paperwork">Carry out your entire project from start to finish and report to stakeholders using one solution,without worrying about piles of paperwork</string>
    <string name="label_points">Points</string>
    <string name="label_lines">Lines</string>
    <string name="label_polygons">Polygons</string>
    <string name="label_start_survey">Take Survey</string>

    <string name="no_google_playservice_available">No Google Playservice found. Please install it.</string>
    <string name="permission_denied_explanation">You have not granted location permission. So the service cannot be started.</string>
    <string name="settings">settings</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="label_wakf_board">Wakf Board</string>
    <string name="label_submit">Submit</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_no_items_found">No items found</string>
    <string name="label_property_value">Property Value*</string>
    <string name="label_update">Update</string>
    <string name="label_property_creation">Property Creation</string>
    <string name="lable_area">Area</string>
    <string name="label_survey_status">Survey Status</string>
    <string name="label_property_value_">Property Value</string>
    <string name="label_no_data_found">No data found</string>
    <string name="label_create_property">Create Property</string>
    <string name="label_edit_property_details">Edit Property Details</string>
    <string name="label_polyline">Polylines</string>
    <string name="label_polygon">Polygon</string>
    <string name="label_distance">Distance: 0.0 m</string>
    <string name="label_profile">Profile</string>
    <string name="label_survey_details">Survey Details</string>
    <string name="label_date">date</string>
    <string name="label_description">Description</string>
    <string name="label_tittle">tittle</string>
    <string name="label_no_images_found">No images found</string>
    <string name="label_upload_photos">Upload Photos</string>
    <string name="gps_network_not_enabled" >Gps network not enabled</string>
    <string name="open_location_settings">Open location setting</string>
    <string name="Cancel">cancel</string>
    <item type="id" name="polygon_marker_position" />
</resources>
