<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.thresholdsoft.praanadhara.ui.selectingformactivity.SelectingFormMvpPresenter" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_ripple_effect">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="@dimen/sixty_five_dp"
                android:layout_height="@dimen/sixty_five_dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:src="@drawable/tree" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/label_praanadhaara"
                android:textColor="@color/yellow"
                android:textSize="@dimen/text_dimen_22" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifty_dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/label_select_one_of_the_below"
                android:textColor="@color/white"
                android:textSize="@dimen/text_dimen_16" />

            <TextView
                android:layout_width="@dimen/one_hundred_fifty_dp"
                android:layout_height="@dimen/forty_five_dp"
                android:layout_marginTop="@dimen/thirty_dp"
                android:background="@drawable/button_rounded_pink"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/label_enrollment"
                android:textColor="@color/white"
                android:textSize="@dimen/text_dimen_18" />

            <TextView
                android:layout_width="@dimen/one_hundred_ten_dp"
                android:layout_height="@dimen/forty_five_dp"
                android:layout_marginTop="@dimen/thirty_dp"
                android:background="@drawable/button_rounded_blue"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:onClick="@{()-> presenter.onSurveyClick()}"
                android:text="@string/label_survey"
                android:textColor="@color/white"
                android:textSize="@dimen/text_dimen_18" />
        </LinearLayout>
    </RelativeLayout>
</layout>
