<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cart_item_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/one_hundred_forty_dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="@dimen/sixty_five_dp"
                android:layout_height="@dimen/sixty_five_dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:src="@drawable/tree" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/label_praanadhaara"
                android:textColor="@color/yellow"
                android:textSize="@dimen/text_dimen_22"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/label_enrollment_form"
                android:textColor="@color/white"
                android:textSize="@dimen/text_dimen_17" />

        </LinearLayout>

    </RelativeLayout>
</layout>
