<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/two_hundred_dp"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/fifty_dp"
                    android:layout_height="@dimen/fifty_dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/user_logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingStart="@dimen/ten_dp"
                        android:text="@string/label_hello"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_dimen_14"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:paddingStart="@dimen/ten_dp"
                        android:text="@string/label_krishna_kishore"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_dimen_17"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_dp"
            android:layout_alignParentBottom="true"
            android:background="@color/white" />
    </RelativeLayout>


</layout>
